<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:alpha="1"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/take_photo_bttn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/add_image_button"
            android:padding="15dp"
            android:scaleType="center"
            android:src="@drawable/ic_camera" />

        <TextView
            android:id="@+id/dialogTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_neue_med"
            android:text="@string/take_a_new_photo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="19sp" />


        <ImageButton
            android:id="@+id/chose_photo_bttn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/add_image_button"
            android:padding="15dp"
            android:scaleType="center"
            android:src="@drawable/ic_add_photo" />

        <TextView
            android:id="@+id/dialogChoosePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_neue_med"
            android:text="@string/choose_photo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="19sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/dialogCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp"
            android:elevation="3dp"
            android:fontFamily="@font/helvetica_neue_med"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="24sp" />

    </RelativeLayout>
</LinearLayout>