<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background"
    tools:context=".ChatroomActivity">

    <include
        android:id="@+id/chat_app_bar"
        layout="@layout/snippet_toolbar_chat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/chat_app_bar"
        android:layout_alignParentStart="true">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageButton
            android:id="@+id/chat_add_bttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/add_image_button"
            android:padding="13dp"
            android:scaleType="center"
            android:src="@drawable/ic_add_photo" />

        <EditText
            android:id="@+id/edit_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="8"
            android:background="@drawable/shape_rounded_edit_text"
            android:ems="10"
            android:hint="@string/type_a_message"
            android:imeOptions="flagNoExtractUi"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textPersonName|textCapSentences"
            android:paddingLeft="10dp"
            android:paddingTop="14dp"
            android:paddingRight="10dp"
            android:paddingBottom="12dp" />

        <ImageButton
            android:id="@+id/chat_send_bttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/send_message_button"
            android:padding="13dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_send_message"
            android:tint="@color/orange" />


    </LinearLayout>
</RelativeLayout>